# ai-switch

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-29-ai-switch-v1-plan-a-foundations.md  2026-04-30-ai-switch-v1-plan-b-tui.md  2026-05-01-ai-switch-v1-plan-c-release.md
docs/superpowers/specs/: 2026-04-29-ai-switch-design.md  2026-05-01-ai-switch-v1-plan-c-release-design.md
src/: catalog.rs  claude.rs  credentials.rs  error.rs  http.rs  lib.rs  main.rs  paths.rs  profile.rs  providers.rs  settings.rs
src/tui/: app.rs  mod.rs  widgets.rs
src/tui/views/: doctor.rs  keys.rs  mod.rs  profiles.rs  providers.rs  wizard.rs
tests/: launch_smoke.rs
