[package]
name = "ai-switch"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Claude Code 配置切换工具：profile = 标准 settings.json 文件，零 lock-in"
repository = "https://github.com/YoungHong1992/ai-switch"

[[bin]]
name = "ais"
path = "src/main.rs"

[lib]
name = "ais"
path = "src/lib.rs"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
thiserror   = "2"
anyhow      = "1"
clap        = { version = "4", features = ["derive"] }
which       = "7"
directories = "5"
chrono      = { version = "0.4", features = ["serde"] }
ratatui     = "0.29"
crossterm   = "0.28"
ureq        = { version = "2", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
